# sonic-pi

./: .gitignore  BUILD-LINUX.md  BUILD-WINDOWS.md  CMakeLists.txt
.github/workflows/: build.yml
app/: linux-config.sh  mac-pre-vcpkg.sh  pi-setup.sh  win-config.bat  win-pre-vcpkg.bat
app/api/: CMakeLists.txt
app/api-tests/: CMakeLists.txt
app/gui/: CMakeLists.txt  mainwindow.cpp
app/gui/images/: tutorial
app/gui/lang/: sonic-pi_bg.ts  sonic-pi_bn.ts  sonic-pi_bs.ts  sonic-pi_ca.ts  sonic-pi_cs.ts  sonic-pi_da.ts  sonic-pi_de.ts  sonic-pi_el.ts  sonic-pi_en_US.ts  sonic-pi_eo.ts  sonic-pi_es.ts  sonic-pi_et.ts  sonic-pi_fa.ts  sonic-pi_fi.ts  sonic-pi_fr.ts  sonic-pi_ga.ts  sonic-pi_gl.ts  sonic-pi_he.ts  sonic-pi_hi.ts  sonic-pi_hu.ts  sonic-pi_hy.ts  sonic-pi_id.ts  sonic-pi_is.ts  sonic-pi_it.ts  sonic-pi_ja.ts  sonic-pi_ka.ts  sonic-pi_ko.ts  sonic-pi_nb.ts  sonic-pi_nl.ts  sonic-pi_pl.ts  sonic-pi_pt.ts  sonic-pi_pt_BR.ts  sonic-pi_ro.ts  sonic-pi_ru.ts  sonic-pi_si.ts  sonic-pi_sk.ts  sonic-pi_sl.ts  sonic-pi_sv.ts  sonic-pi_sw.ts  sonic-pi_th.ts  (+8 more)
app/gui/model/: sonicpitheme.cpp
app/gui/qt/lang/: sonic-pi_cs.ts  sonic-pi_de.ts  sonic-pi_ta.ts
app/server/beam/tau/lib/tau/: hydra_synth_lang.ex
app/server/ruby/: core.rb
app/server/ruby/lib/sonicpi/: runtime.rb  synthnode.rb
app/server/ruby/lib/sonicpi/config/: settings.rb
app/server/ruby/lib/sonicpi/lang/: core.rb  sound.rb
app/server/ruby/lib/sonicpi/synths/: synthinfo.rb
app/server/ruby/test/: setup_test.rb
etc/doc/lang/: sonic-pi-tutorial-bs.po  sonic-pi-tutorial-ca.po  sonic-pi-tutorial-cs.po  sonic-pi-tutorial-da.po  sonic-pi-tutorial-de.po  sonic-pi-tutorial-el.po  sonic-pi-tutorial-es.po  sonic-pi-tutorial-et.po  sonic-pi-tutorial-fi.po  sonic-pi-tutorial-fr.po  sonic-pi-tutorial-gl.po  sonic-pi-tutorial-hi.po  sonic-pi-tutorial-hu.po  sonic-pi-tutorial-id.po  sonic-pi-tutorial-is.po  sonic-pi-tutorial-it.po  sonic-pi-tutorial-ja.po  sonic-pi-tutorial-ko.po  sonic-pi-tutorial-nb.po  sonic-pi-tutorial-nl.po  sonic-pi-tutorial-pl.po  sonic-pi-tutorial-pt-BR.po  sonic-pi-tutorial-pt.po  sonic-pi-tutorial-ro.po  sonic-pi-tutorial-ru.po  sonic-pi-tutorial-sl.po  sonic-pi-tutorial-sv.po  sonic-pi-tutorial-tr.po  sonic-pi-tutorial-zh-Hans.po  sonic-pi-tutorial-zh-Hk.po  sonic-pi-tutorial-zh-TW.po
install/windows/wix/: sonic-pi.wxs
